fix box titles outside on mobile

--- a/assets/app.css
+++ b/assets/app.css
@@ -630,6 +630,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   line-height: 1.75rem;
 }
 
+.twcss-text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .twcss-uppercase {
   text-transform: uppercase;
 }
